@@ -148,28 +148,11 @@ bool Pickable::is_ground_observer() const {
  */
 bool Pickable::initialize_sprites() {
 
-  // Shadow sprite.
-  shadow_sprite = nullptr;
   EquipmentItem& item = treasure.get_item();
-  const std::string& animation = item.get_shadow();
-
-  bool has_shadow = false;
-  if (!animation.empty()) {
-    shadow_sprite = create_sprite("entities/shadow");
-    has_shadow = shadow_sprite->has_animation(animation);
-  }
-
-  if (!has_shadow) {
-    // No shadow or no such shadow animation.
-    shadow_sprite = nullptr;
-  }
-  else {
-    shadow_sprite->set_current_animation(animation);
-  }
 
   // Main sprite.
   const std::string item_name = treasure.get_item_name();
-  item_sprite = create_sprite("entities/items");
+  item_sprite = create_sprite("entities/items", "treasure");
 
   if( !item_sprite->has_animation(item_name)) {
     std::ostringstream oss;
@@ -193,7 +176,25 @@ bool Pickable::initialize_sprites() {
     direction = 0;  // Fallback.
   }
   item_sprite->set_current_direction(direction);
-  item_sprite->enable_pixel_collisions();
+
+  // Shadow sprite.
+  shadow_sprite = nullptr;
+  const std::string& shadow_animation = item.get_shadow();
+
+  bool has_shadow = false;
+  if (!shadow_animation.empty()) {
+    shadow_sprite = create_sprite("entities/shadow", "shadow");
+    has_shadow = shadow_sprite->has_animation(shadow_animation);
+  }
+
+  if (!has_shadow) {
+    // No shadow or no such shadow animation.
+    shadow_sprite = nullptr;
+  }
+  else {
+    shadow_sprite->set_current_animation(shadow_animation);
+  }
+  enable_pixel_collisions();
 
   // Set the origin point and the size of the entity.
   set_size(16, 16);
@@ -324,10 +325,15 @@ void Pickable::notify_collision(Entity& entity_overlapping, CollisionMode /* col
  */
 void Pickable::notify_collision(
     Entity& other_entity,
-    Sprite& /* this_sprite */,
+    Sprite& this_sprite,
     Sprite& other_sprite
 ) {
-  // taking the item with the sword
+  if (&this_sprite != item_sprite.get()) {
+    // Ignore collisions with the shadow.
+    return;
+  }
+
+  // Taking the item with the sword.
   if (other_entity.is_hero()) {
     Hero& hero = static_cast<Hero&>(other_entity);
     if (other_sprite.get_animation_set_id() == hero.get_hero_sprites().get_sword_sprite_id()) {
@@ -339,7 +345,7 @@ void Pickable::notify_collision(
 /**
  * \brief Reacts to the ground of the pickable.
  *
- * It is removed it is on water, lava or a hole.
+ * It is removed if it is on water, lava or a hole.
  * It goes to the lower layer if the ground is empty.
  */
 void Pickable::check_bad_ground() {
